# sp1_recursion

platinum_proofs/: fibonacci.proof
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs  platinum_verifier.rs
script/: Cargo.toml
script/src/: main.rs
